Updated how key-value strings are handled at the API level
- Removed the KeyValueParamDTO and replaced all endpoints using it
  with a simple collection of strings
- Removed all abstractions, converters, or interceptors built to
  process and convert KeyValueParamDTO instances, as they no longer
  have use with the removal of the KeyValueParamDTO
- Removed CandlepinParameterParseException and its associated mappers,
  as this exception was very oddly built, only used for a very
  specific conversion, and the error message wasn't translating
  properly
- Added a new utility class, KeyValueStringParser, to provide
  utility functionality for key-value strings into lists, streams,
  or maps of key-value pairs
- Updated several endpoints and tests accordingly